--- a/www/index.html
+++ b/www/index.html
@@ -2763,7 +2763,7 @@
 
         GlobalState.prototype.destroy_editors = function (name) {
             
-            window.edit_html_edito.toTextArea();
+            window.edit_html_editor.toTextArea();
             window.edit_javascript_editor.toTextArea();
             window.create_html_editor.toTextArea();
             window.create_javascript_editor.toTextArea();
